<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>
    <string name="app_name">DevCrowd \'14</string>
    <string name="simplyText">Lorem ipsum dolor sit amet enim. Etiam ullamcorper. Suspendisse a pellentesque dui, non felis. Maecenas malesuada elit lectus felis, malesuada ultricies. Curabitur et ligula. Ut molestie a, ultricies porta urna. Vestibulum commodo volutpat a, convallis ac, laoreet enim. Phasellus fermentum in, dolor. Pellentesque facilisis. Nulla imperdiet sit amet magna. Vestibulum dapibus, mauris nec malesuada fames ac turpis velit, rhoncus eu, luctus et interdum adipiscing wisi. Aliquam erat ac ipsum. Integer aliquam purus. Quisque lorem tortor fringilla sed, vestibulum id, eleifend justo vel bibendum sapien massa ac turpis faucibus orci luctus non, consectetuer lobortis quis, varius in, purus. Integer ultrices posuere cubilia Curae, Nulla ipsum dolor lacus, suscipit adipiscing. Cum sociis natoque penatibus et ultrices volutpat. Nullam wisi ultricies a, gravida vitae, dapibus risus ante sodales lectus blandit eu, tempor diam pede cursus vitae, ultricies eu, faucibus quis, porttitor eros cursus lectus, </string>
    <string name="ratePresentation">Oceń prezentację</string>
    <string name="cancel">Anuluj</string>
    <string name="send">Wyślij</string>
    <string name="about_dialog_title">O aplikacji</string>
    <string name="about_dialog_subtitle">DevCrowd App</string>
    <string name="about_dialog_devcrowd_www">www.2014.devcrowd.pl</string>
    <string name="about_dialog_authors_title">Autorzy</string>
    <string name="about_dialog_authors_name">SKN Mobile Applications Developers WI ZUT</string>
    <string name="about_dialog_authors_www">www.mad.zut.edu.pl</string>
    <string name="devcrowd_info_title">DevCrowd\'14</string>
    <string name="devcrowd_info_body">Dziel się wiedzą,\ndziel się pasją</string>
    <string name="drawer_open">Drawer otwarty</string>
    <string name="drawer_close">Drawer zamknięty</string>
    <string name="waitforit">Pobieram dane#8230;</string>
    <!-- Nav Drawer Menu Items -->
    <string-array name="navigation_drawer_items">
        <item>DevCrowd \'14</item>
        <item>Agenda</item>
        <item>Ulubione</item>
        <item>Sponsorzy</item>
        <item>O aplikacji</item>
    </string-array>
    <array name="navigation_drawer_icons">
        <item>@drawable/ic_launcher</item>
        <item>@drawable/drawer_agenda</item>
        <item>@drawable/drawer_favourites</item>
        <item>@drawable/drawer_founders</item>
        <item>@drawable/drawer_about</item>
    </array>
    <string name="topicGrade">Ocena tematyki</string>
    <string name="speakerRate">Ocena prelegenta</string>
    <string name="speakersRate">Ocena prelegentów</string>
    <string name="crash_toast_text">Uuuupss, coś poszło nie tak:/</string>
    <string name="success_voting_toast_text">Dziękujemy za oddanie głosu</string>
    <string name="error_voting_toast_text">Błąd przesłania oceny na serwer, spróbuj ponownie</string>
    <string name="error_loading_presentations">Błąd ładowania prezentacji</string>
    <string name="no_internet_info">Brak połączenia z Internetem</string>
    <string name="email_hint">E-mail</string>
    <string name="platiniumSponsors">Sponsorzy platynowi</string>
    <string name="sponsors">Sponsorzy</string>
    <string name="patronage">Patronat</string>
    <string name="partners">Partnerzy</string>
    <string name="createdBy">Autorzy aplikacji</string>
    <string name="hour">Godzina:</string>
    <string name="no_data">Brak prezentacji do pokazania</string>
    <string name="no_internet_send_rates_info">Wysyłanie nieudane, brak połączenia z Internetem</string>
    <string name="added_presentation_alarm_info">Dodano przypomnienie o prezentacji</string>
    <string name="removed_presentation_alarm_info">Usunięto przypomnienie o prezentacji</string>
    <string name="devCrowdWWW">http://2014.devcrowd.pl</string>
    <string name="authorsWWW">http://www.mad.zut.edu.pl</string>
    <string name="authors">Dawid Gliński\nRafał Mielnik\nMarcin Mierzejewski\nSebastian Peryt\nSebastian Świerczek\nMichał Wojtalewicz</string>
    <string name="authors_mentor_title">Opiekun koła</string>
    <string name="authors_mentor">dr inż. Radosław Maciaszczyk</string>
    <string name="favoTitle">Ulubione</string>
    <string name="favoDetails">Dodaj prezentację do ulubionych, aby otrzymać powiadomienie.</string>
    <string name="legalNoticesTitle">Legal notices</string>
    <string name="legalNotices">Application use open source software:\n\n- Styled Dialogs Copyright 2013 Inmite s.r.o. (www.inmite.eu)\n- ACRA Copyright 2013 Kevin Gaudin\n- ShowcaseView Copyright 2012 Alex Curran\n\nLicense:\n\nCopyright 2014 Mobile Applications Developers WI ZUT\n\nLicensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at\n\nhttp://www.apache.org/licenses/LICENSE-2.0\n\nUnless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.</string>
</resources>
